// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StoryElement displays correct npc thumbnail for model "a-npc-alerobot" 1`] = `
<img
  alt="LearningImage!"
  class="invisible z-20 h-0 -scale-x-100 object-contain brightness-125 lg:visible lg:h-full"
  data-testid="npcImage"
  src="a-npc-alerobot-welcome.png"
/>
`;

exports[`StoryElement displays correct npc thumbnail for model "a-npc-defaultarcade" 1`] = `
<img
  alt="LearningImage!"
  class="invisible z-20 h-0 -scale-x-100 object-contain brightness-125 lg:visible lg:h-full"
  data-testid="npcImage"
  src="a-npc-sheriffjustice-welcome.png"
/>
`;

exports[`StoryElement displays correct npc thumbnail for model "a-npc-defaultcampus" 1`] = `
<img
  alt="LearningImage!"
  class="invisible z-20 h-0 -scale-x-100 object-contain brightness-125 lg:visible lg:h-full"
  data-testid="npcImage"
  src="a-npc-teamb-male-welcome.png"
/>
`;

exports[`StoryElement displays correct npc thumbnail for model "a-npc-defaultsuburb" 1`] = `
<img
  alt="LearningImage!"
  class="invisible z-20 h-0 -scale-x-100 object-contain brightness-125 lg:visible lg:h-full"
  data-testid="npcImage"
  src="a-npc-teamd-male-welcome.png"
/>
`;
